<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.cascada</groupId>
    <artifactId>cascada-platform</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Cascada Platform (parent)</name>
    <description>
        The lakehouse query engine that gets faster the more you use it.
        Parent aggregator and dependency-management BOM for every Cascada module.
        Domain and application layers are framework-free Java 21; frameworks live only in adapters.
    </description>

    <modules>
        <module>lib_identity</module>
        <module>lib_cache</module>
        <module>lib_spark_config</module>
        <module>lib_fabric</module>
        <module>lib_sql</module>
        <module>lib_spark</module>
        <module>app</module>
    </modules>

    <properties>
        <maven.compiler.release>17</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <junit.jupiter.version>5.10.2</junit.jupiter.version>
        <assertj.version>3.25.3</assertj.version>
        <jqwik.version>1.8.4</jqwik.version>
        <archunit.version>1.3.0</archunit.version>
        <jackson.version>2.17.1</jackson.version>
        <datasketches.version>6.0.0</datasketches.version>
        <calcite.version>1.37.0</calcite.version>
        <arrow.version>15.0.2</arrow.version>
        <zstd.version>1.5.6-3</zstd.version>
        <lettuce.version>6.3.2.RELEASE</lettuce.version>
        <fabric8.version>6.13.4</fabric8.version>

        <surefire.plugin.version>3.2.5</surefire.plugin.version>
        <compiler.plugin.version>3.13.0</compiler.plugin.version>
        <jacoco.plugin.version>0.8.12</jacoco.plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Test stack (pinned once for every module) -->
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit.jupiter.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>net.jqwik</groupId>
                <artifactId>jqwik</artifactId>
                <version>${jqwik.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.tngtech.archunit</groupId>
                <artifactId>archunit-junit5</artifactId>
                <version>${archunit.version}</version>
                <scope>test</scope>
            </dependency>

            <!-- Runtime libraries used only inside adapters -->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.datasketches</groupId>
                <artifactId>datasketches-java</artifactId>
                <version>${datasketches.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.datasketches</groupId>
                <artifactId>datasketches-memory</artifactId>
                <version>3.0.2</version>
            </dependency>
            <dependency>
                <groupId>org.apache.calcite</groupId>
                <artifactId>calcite-core</artifactId>
                <version>${calcite.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.arrow</groupId>
                <artifactId>arrow-vector</artifactId>
                <version>${arrow.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.arrow</groupId>
                <artifactId>arrow-memory-unsafe</artifactId>
                <version>${arrow.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.luben</groupId>
                <artifactId>zstd-jni</artifactId>
                <version>${zstd.version}</version>
            </dependency>
            <dependency>
                <groupId>io.lettuce</groupId>
                <artifactId>lettuce-core</artifactId>
                <version>${lettuce.version}</version>
            </dependency>
            <!-- Fabric8 Kubernetes client: the "apply -f" + lifecycle layer (adapter-only). -->
            <dependency>
                <groupId>io.fabric8</groupId>
                <artifactId>kubernetes-client</artifactId>
                <version>${fabric8.version}</version>
            </dependency>
            <dependency>
                <groupId>io.fabric8</groupId>
                <artifactId>kubernetes-server-mock</artifactId>
                <version>${fabric8.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>io.fabric8</groupId>
                <artifactId>kubernetes-junit-jupiter</artifactId>
                <version>${fabric8.version}</version>
                <scope>test</scope>
            </dependency>

            <!-- Intra-platform modules -->
            <dependency>
                <groupId>com.cascada</groupId>
                <artifactId>cascada-lib-identity</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.cascada</groupId>
                <artifactId>cascada-lib-cache</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.cascada</groupId>
                <artifactId>cascada-lib-spark-config</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.cascada</groupId>
                <artifactId>cascada-lib-fabric</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.cascada</groupId>
                <artifactId>cascada-lib-sql</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.cascada</groupId>
                <artifactId>cascada-lib-spark</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Every module gets the JUnit 5 + AssertJ test baseline -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${compiler.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${surefire.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco.plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
